Added a stylesheet and delete functionality
Also fixed a bug in the login page and added test functions for everything.

--- a/flaskr-tdd/project/templates/login.html
+++ b/flaskr-tdd/project/templates/login.html
@@ -32,7 +32,7 @@
                     <dd><input type="text" name="username" /></dd>
                     <dt>Password:</dt>
                     <dd><input type="password" name="password" /></dd>
-                    <dd><input type"submit" value="Login" /></dd>
+                    <dd><input type="submit" value="Login" /></dd>
                 </dl>
             </form>
         </div>
