--- a/flaskr-tdd/project/templates/index.html
+++ b/flaskr-tdd/project/templates/index.html
@@ -33,7 +33,7 @@
             <ul class="entries">
                 {% for entry in entries %}
                 <li>
-                    <h2>{{ entry.title }}</h2>
+                    <h2 id="{{ entry.id }}">{{ entry.title }}</h2>
                     {{ entry.text|safe }}
                 </li>
                 {% else %}
@@ -41,5 +41,6 @@
                 {% endfor %}
             </ul>
         </div>
+        <script type="text/javascript" src="{{ url_for('static', filename='main.js') }}"></script>
     </body>
 </html>
